--- a/GraniteHouseUdemy/appsettings.json
+++ b/GraniteHouseUdemy/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=FSH-DT-167\\SQL2016;Database=GraniteHouseUdemy;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=FSH-DT-167\\SQL2016;Database=GraniteHouseUdemy;User ID=sa;Password=tzimakos2018!;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
