Added changes for comment administration

--- a/gallery/.vscode/settings.json
+++ b/gallery/.vscode/settings.json
@@ -14,7 +14,7 @@
         "packages": [
             {
                 "name":"gallery",
-                "deployOnSave": true,
+                "deployOnSave": false,
                 "targets":[
                     "apache dev"
                 ]
