--- a/AdvancedAspNetCore3MVC/Uplift/Uplift/appsettings.json
+++ b/AdvancedAspNetCore3MVC/Uplift/Uplift/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Uplift-C60C145F-913D-419F-BF2F-B020A106B60E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.168.118.4;Database=Uplift;User Id = sa;Password=tzimakos2019!;"
   },
   "Logging": {
     "LogLevel": {
