--- a/AdvancedAspNetCore3MVC/Uplift/Uplift/Uplift.csproj
+++ b/AdvancedAspNetCore3MVC/Uplift/Uplift/Uplift.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\Uplift.DataAccess\Uplift.DataAccess.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\services\" />
+  </ItemGroup>
+
 </Project>
