--- a/CompleteAngular11UltimateGuideRealWorldApp/MvcTaskManager/MvcTaskManager/appsettings.json
+++ b/CompleteAngular11UltimateGuideRealWorldApp/MvcTaskManager/MvcTaskManager/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,14331;Database=TaskManager;User Id=sa;Password=tz!m@k0s2021!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
