--- a/CompleteAngular11UltimateGuideRealWorldApp/MvcTaskManager/MvcTaskManager/appsettings.json
+++ b/CompleteAngular11UltimateGuideRealWorldApp/MvcTaskManager/MvcTaskManager/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,14331;Database=TaskManager;User Id=sa;Password=tz!m@k0s2021!;"
   },
+  "AppSettings": {
+    "Secret": "ThisIsTheMostSecret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
