--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/BlazorMovies.Client.csproj
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/BlazorMovies.Client.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
@@ -12,6 +13,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\BlazorMovies.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <BlazorWebAssemblyLazyLoad Include ="MathNet.Numerics.dll" />
   </ItemGroup>
 
 </Project>
