--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/BlazorMovies.Client.csproj
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/BlazorMovies.Client.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.26.0" />
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
@@ -16,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <BlazorWebAssemblyLazyLoad Include ="MathNet.Numerics.dll" />
+    <BlazorWebAssemblyLazyLoad Include="MathNet.Numerics.dll" />
   </ItemGroup>
 
 </Project>
