--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Server/appsettings.Development.json
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost,14331;Database=BlazorMovies;User Id=sa;Password=tz!m@k0s2021!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
