blazor authorization and authentication

--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Server/appsettings.Development.json
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Server/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Server=localhost,14331;Database=BlazorMovies;User Id=sa;Password=tz!m@k0s2021!;"
   },
+  "jwt": {
+    "key": "TZIMAKOS2021@)@!123456789"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
