--- a/KafkaForBeginners/KafkaBasics/KafkaConsumer/KafkaConsumer.csproj
+++ b/KafkaForBeginners/KafkaBasics/KafkaConsumer/KafkaConsumer.csproj
@@ -9,8 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.9.3" />
+    <PackageReference Include="Confluent.SchemaRegistry" Version="1.9.3" />
+    <PackageReference Include="Confluent.SchemaRegistry.Serdes" Version="1.3.0" />
+    <PackageReference Include="Confluent.SchemaRegistry.Serdes.Json" Version="1.9.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
